# bcarsdotorg

./: .gitignore  README.md  go.mod  go.sum  hugo.toml
.github/workflows/: README.md  update-calendar.yml
archetypes/: default.md
assets/css/: custom.css
config/_default/: hugo.toml
content/: 100-about.md  200-activities.md  200-schedule.md  250-meetings.md  300-repeaters.md  400-license.md  500-workshops.md  600-membership.md  900-constituion.md  950-bylaws.md  955-history.md  _index.md
content/fieldday/: _index.md  winter.md
content/meetings/: _index.md  archives.md
content/meetings/2023/: bcars-minutes-2023-11-02.md  bcars-minutes-2023-12-07.md
content/meetings/2024/: bcars-minutes-2024-01-04.md  bcars-minutes-2024-02-01.md  bcars-minutes-2024-03-07.md  bcars-minutes-2024-04-05.md  bcars-minutes-2024-05-02.md  bcars-minutes-2024-06-06.md  bcars-minutes-2024-07-04.md  bcars-minutes-2024-08-01.md  bcars-minutes-2024-09-05.md  bcars-minutes-2024-10-03.md  bcars-minutes-2024-11-07.md  bcars-minutes-2024-12-05.md
content/resources/: 615-what-is.md  620-badge.md  630-frequencies.md  _index.md
i18n/: en.yaml
layouts/minutes/: list.html  single.html
layouts/shortcodes/: list-files.html
static/files/: BCARS-2020-Frequencies-2m-220.csv  BCARS-2020-Frequencies-2m-440-BCARS-2020-Frequencies-bedfordrequencies-2020.csv  BCARS-2020-Frequencies-bedfordrequencies-2020-BCARS-2020-Frequencies-bedfordrequencies-2020.csv
static/files/minutes/: pdflist  (+1 more)
tools/: .gitignore  ICAL_GENERATOR_README.md  generate_from_ics.py  groupsio_client.py  pyproject.toml
(+19 files in other folders)
