[project]
name = "bcars-groupsio-tools"
version = "0.1.0"
description = "CLI tools for managing BCARS Groups.io calendar"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "python-dateutil>=2.8.2",
    "tabulate>=0.9.0",
    "icalendar>=5.0.0",
    "recurring-ical-events>=2.0.0",
    "tzdata>=2023.3",
]

[project.scripts]
list-events = "list_events:main"
add-event = "add_event:main"
update-event = "update_event:main"
delete-event = "delete_event:main"
get-event = "get_event:main"
duplicate-event = "duplicate_event:main"
generate-from-ics = "generate_from_ics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

